<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="상세주소입력">상세주소를 입력해주세요</string>
    <string name="짐캐리">짐캐리</string>
    <string name="배송예약">배송예약</string>
    <string name="공항예약">공항예약</string>
    <string name="예약조회">예약조회</string>
    <string name="출발지주소입력">출발지 주소 입력</string>
    <string name="도착지주소입력">도착지 주소 입력</string>
    <string name="배송수거지">배송수거지</string>
    <string name="상세주소">상세주소</string>
    <string name="탑승일시">탑승일시</string>
    <string name="날짜선택">날짜 선택</string>
    <string name="탑승시간선택">탑승시간 선택</string>
    <string name="방문일시">방문일시</string>
    <string name="방문수거일">방문수거일</string>
    <string name="방문날짜선택">방문날짜 선택</string>
    <string name="탑승날짜선택">탑승날짜 선택</string>
    <string name="날짜를선택해주세요">날짜를 선택 해주세요</string>
    <string name="방문희망시간">방문 희망 시간</string>
    <string name="일정에따라">(일정에 따라 다소 변경될 수 있음)</string>
    <string name="시간선택">시간 선택</string>
    <string name="도착공항">도착 공항</string>
    <string name="인천공항1터미널">인천공항 1 터미널</string>
    <string name="인천공항2터미널">인천공항 2 터미널</string>
    <string name="항공편명">항공편 명</string>
    <string name="대소문자구별">(대/소문자를 구분하여 정확히 입력)</string>
    <string name="다음">다음</string>
    <string name="일반가방수">일반가방 수</string>
    <string name="인치">x20,000원(28인치/25kg 이하)</string>
    <string name="규격외물품수">규격 외 물품 수</string>
    <string name="인치2">x30,000원(골프백/이민 가방)</string>
    <string name="오늘이후로예약">오늘날짜 다음날부터 예약이 가능합니다</string>
    <string name="지난날">지난날에는 예약이 불가능합니다</string>
    <string name="합계">합계</string>
    <string name="전화번호">전화번호</string>
    <string name="비밀번호">비밀번호</string>
    <string name="네자리">비밀번호 4자리입력</string>
    <string name="기타">기타</string>
    <string name="예약하기">예약하기</string>
    <string name="탑승일먼저입력">탑승일을 먼저 입력해주세요</string>
    <string name="방문수거일먼저입력">방문수거일을 먼저 입력해주세요</string>
    <string name="방문신청">방문신청은 당일신청이 불가능합니다</string>
    <string name="탑승일은">탑승일은 방문수거일 보다 같거나 이후이여야 합니다</string>
    <string name="방문수거일과">방문수거일과 탑승일이 동일시에는 오후시간만 예약가능합니다.</string>
    <string name="입력되지않은항목">입력되지 않은 항목이 있습니다</string>
    <string name="도착배송지">도착배송지</string>
    <string name="개">개</string>
    <string name="출발지">출발지</string>
    <string name="도착지">도착지</string>
    <string name="주소">주소</string>
    <string name="총합계">총 합계</string>
    <string name="일반가방">일반가방 /</string>
    <string name="규격외가방">규격외가방 /</string>
    <string name="배송희망일">배송희망일:</string>
    <string name="착륙날짜선택">착륙날짜 선택</string>
    <string name="탑승일시조">탑승일시:</string>
    <string name="항공편명조">항공편명 /</string>
    <string name="예약">예약</string>
    <string name="전화번호국적">KR</string>
    <string name="원">원</string>
    <string name="무선네트워크">무선 네트워크 사용, GPS 위성 사용을 모두 체크하셔야 정확한 위치 서비스가 가능합니다.\n위치 서비스 기능을 설정하시겠습니까?</string>
    <string name="위치서비스">위치서비스설정</string>
    <string name="프로그램종료">프로그램을 종료하시겠습니까?</string>
    <string name="가방을수령">가방을 수령하셨습니까?</string>
    <string name="예약시간">예약시간:</string>
    <string name="추가요청사항조">추가 요청 사항</string>
    <string name="공항도착일">공항도착일</string>
    <string name="공항도착시간">공항 도착 시간</string>
    <string name="모든항목동의">모든항목에 동의하셨습니다</string>
    <string name="모든항목동의2">모든항목에 동의해주세요</string>
    <string name="당일예약은">당일예약은 오전11시 이전에 예약하셔야합니다</string>
    <string name="당일예약시">당일예약시 탑승시간은 오후 6시 이후여야합니다</string>
    <string name="위치기반약관">표준 이용약관안(안)



제 1장. 총 칙

제 1 조 (목적) 본 약관은 회원( &amp;300;주&amp;301;비케이로지스 잼캐리 앱 위치기반 서비스 약관에 동의한 자를 말합니다. 이하 "회원"이라고 합니다.)
이 &amp;300;주&amp;301;비캐리로지스 짐캐리 (이하 "회사"라고 합니다.)이 제공하는 짐캐리 앱 서비스(이하 "서비스"라고 합니다)를 이용함에
있어 회사와 회원의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.

제 2 조 (이용약관의 효력 및 변경)

① 본 약관은 서비스를 신청한 고객 또는 개인위치정보주체가 본 약관에 동의하고 회사가 정한 소정의 절차에 따라 서비스의 이용자로 등록함으로써 효력이 발생합니다.

② 회원이 온라인에서 본 약관의 "동의하기" 버튼을 클릭하였을 경우 본 약관의 내용을 모두 읽고 이를 충분히 이해하였으며, 그 적용에 동의한 것으로 봅니다.

③ 회사는 위치정보의 보호 및 이용 등에 관한 법률, 콘텐츠산업 진흥법, 전자상거래 등에서의 소비자보호에 관한 법률, 소비자 기본법 약관의 규제에 관한 법률 등 관련법령을 위배하지 않는 범위에서 본 약관을 개정할 수 있습니다.

④ 회사가 약관을 개정할 경우에는 기존약관과 개정약관 및 개정약관의 적용일자와 개정사유를 명시하여 현행약관과 함께 그 적용일자 10일 전부터 적용일 이후 상당한 기간 동안 공지만을 하고, 개정 내용이 회원에게 불리한 경우에는 그 적용일자 30일 전부터 적용일 이후 상당한 기간 동안 각각 이를 서비스 홈페이지에 게시하거나 회원에게 전자적 형태(전자우편, SMS 등)로 약관 개정 사실을 발송하여 고지합니다.

⑤ 회사가 전항에 따라 회원에게 통지하면서 공지 또는 공지ㆍ고지일로부터 개정약관 시행일 7일 후까지 거부의사를 표시하지 아니하면 이용약관에 승인한 것으로 봅니다. 회원이 개정약관에 동의하지 않을 경우 회원은 이용계약을 해지할 수 있습니다.

제 3 조 (관계법령의 적용) 본 약관은 신의성실의 원칙에 따라 공정하게 적용하며, 본 약관에 명시되지 아니한 사항에 대하여는 관계법령 또는 상관례에 따릅니다.

제 4 조 (서비스의 내용) 회사가 제공하는 서비스는 아래와 같습니다.
서비스 명 서비스 내용
짐캐리 앱 서비스 내 위치 배송 접수시 등을 휴대폰에서 볼 수 있게 해주는 서비스임.
제 5 조 (서비스 이용요금)

① 회사가 제공하는 서비스는 기본적으로 유료 또는 무료입니다. 단, 별도의 유료 서비스의 경우 해당 서비스에 명시된 요금을 지불하여야 사용 가능합니다.

② 회사는 유료 서비스 이용요금을 회사와 계약한 전자지불업체에서 정한 방법에 의하거나 회사가 정한 청구서에 합산하여 청구할 수 있습니다.

③ 유료서비스 이용을 통하여 결제된 대금에 대한 취소 및 환불은 회사의 결제 이용약관 등 관계법에 따릅니다.

④ 회원의 개인정보도용 및 결제사기로 인한 환불요청 또는 결제자의 개인정보 요구는 법률이 정한 경우 외에는 거절될 수 있습니다.

⑤ 무선 서비스 이용 시 발생하는 데이터 통신료는 별도이며 가입한 각 이동통신사의 정책에 따릅니다.

⑥ MMS 등으로 게시물을 등록할 경우 발생하는 요금은 이동통신사의 정책에 따릅니다.

제 6 조 (서비스내용변경 통지 등)

① 회사가 서비스 내용을 변경하거나 종료하는 경우 회사는 회원의 등록된 전자우편 주소로 이메일을 통하여 서비스 내용의 변경 사항 또는 종료를 통지할 수 있습니다.

② ①항의 경우 불특정 다수인을 상대로 통지를 함에 있어서는 웹사이트 등 기타 회사의 공지사항을 통하여 회원들에게 통지할 수 있습니다.

제 7 조 (서비스이용의 제한 및 중지)

① 회사는 아래 각 호의 1에 해당하는 사유가 발생한 경우에는 회원의 서비스 이용을 제한하거나 중지시킬 수 있습니다.

1. 회원이 회사 서비스의 운영을 고의 또는 중과실로 방해하는 경우
2. 서비스용 설비 점검, 보수 또는 공사로 인하여 부득이한 경우
3. 전기통신사업법에 규정된 기간통신사업자가 전기통신 서비스를 중지했을 경우
4. 국가비상사태, 서비스 설비의 장애 또는 서비스 이용의 폭주 등으로 서비스 이용에 지장이 있는 때
5. 기타 중대한 사유로 인하여 회사가 서비스 제공을 지속하는 것이 부적당하다고 인정하는 경우

② 회사는 전항의 규정에 의하여 서비스의 이용을 제한하거나 중지한 때에는 그 사유 및 제한기간 등을 회원에게 알려야 합니다.

제 8 조 (개인위치정보의 이용 또는 제공)

① 회사는 개인위치정보를 이용하여 서비스를 제공하고자 하는 경우에는 미리 이용약관에 명시한 후 개인위치정보주체의 동의를 얻어야 합니다.

② 회원 및 법정대리인의 권리와 그 행사방법은 제소 당시의 이용자의 주소에 의하며, 주소가 없는 경우에는 거소를 관할하는 지방법원의 전속관할로 합니다. 다만, 제소 당시 이용자의 주소 또는 거소가 분명하지 않거나 외국 거주자의 경우에는 민사소송법상의 관할법원에 제기합니다.

③ 회사는 타사업자 또는 이용 고객과의 요금정산 및 민원처리를 위해 위치정보 이용·제공, 사실 확인자료를 자동 기록·보존하며, 해당 자료는 1년간 보관합니다.

④ 회사는 개인위치정보를 회원이 지정하는 제3자에게 제공하는 경우에는 개인위치정보를 수집한 당해 통신 단말장치로 매회 회원 에게 제공받는 자, 제공 일시 및 제공목적을 즉시 통보합니다. 단, 아래 각 호의 1에 해당하는 경우에는 회원이 미리 특정하여 지정한 통신 단말장치 또는 전자우편주소로 통보합니다.

1. 개인위치정보를 수집한 당해 통신단말장치가 문자, 음성 또는 영상의 수신기능을 갖추지 아니한 경우
2. 회원이 온라인 게시 등의 방법으로 통보할 것을 미리 요청한 경우

제 9 조 (개인위치정보주체의 권리)

① 회원은 회사에 대하여 언제든지 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의의 전부 또는 일부를 철회할 수 있습니다. 이 경우 회사는 수집한 개인위치정보 및 위치정보 이용, 제공사실 확인자료를 파기합니다.

② 회원은 회사에 대하여 언제든지 개인위치정보의 수집, 이용 또는 제공의 일시적인 중지를 요구할 수 있으며, 회사는 이를 거절할 수 없고 이를 위한 기술적 수단을 갖추고 있습니다.

③ 회원은 회사에 대하여 아래 각 호의 자료에 대한 열람 또는 고지를 요구할 수 있고, 당해 자료에 오류가 있는 경우에는 그 정정을 요구할 수 있습니다. 이 경우 회사는 정당한 사유 없이 회원의 요구를 거절할 수 없습니다.

1. 본인에 대한 위치정보 수집, 이용, 제공사실 확인자료
2. 본인의 개인위치정보가 위치정보의 보호 및 이용 등에 관한 법률 또는 다른 법률 규정에 의하여 제3자에게 제공된 이유 및 내용

④ 회원은 제1항 내지 제3항의 권리행사를 위해 회사의 소정의 절차를 통해 요구할 수 있습니다.
제 10 조 (법정대리인의 권리)

① 회사는 14세 미만의 회원에 대해서는 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의를 당해 회원과 당해 회원의 법정대리인으로부터 동의를 받아야 합니다. 이 경우 법정대리인은 제9조에 의한 회원의 권리를 모두 가집니다.

② 회사는 14세 미만의 아동의 개인위치정보 또는 위치정보 이용, 제공사실 확인자료를 이용약관에 명시 또는 고지한 범위를 넘어 이용하거나 제3자에게 제공하고자 하는 경우에는 14세 미만의 아동과 그 법정대리인의 동의를 받아야 합니다. 단, 아래의 경우는 제외합니다.

1. 위치정보 및 위치기반서비스 제공에 따른 요금정산을 위하여 위치정보 이용, 제공사실 확인자료가 필요한 경우
2. 통계작성, 학술연구 또는 시장조사를 위하여 특정 개인을 알아볼 수 없는 형태로 가공하여 제공하는 경우

제 11 조 (8세 이하의 아동 등의 보호의무자의 권리)

① 회사는 아래의 경우에 해당하는 자(이하 “8세 이하의 아동”등이라 한다)의 보호의무자가 8세 이하의 아동 등의 생명 또는 신체보호를 위하여 개인위치정보의 이용 또는 제공에 동의하는 경우에는 본인의 동의가 있는 것으로 봅니다.

1. 8세 이하의 아동
2. 금치산자
3. 장애인복지법제2조제2항제2호의 규정에 의한 정신적 장애를 가진 자로서 장애인고용촉진및직업재활법 제2조제2호의 규정에 의한 중증장애인에 해당하는 자(장애인복지법 제29조의 규정에 의하여 장애인등록을 한 자에 한한다)

② 8세 이하의 아동 등의 생명 또는 신체의 보호를 위하여 개인위치정보의 이용 또는 제공에 동의를 하고자 하는 보호의무자는 서면동의서에 보호의무자임을 증명하는 서면을 첨부하여 회사에 제출하여야 합니다.

③ 보호의무자는 8세 이하의 아동 등의 개인위치정보 이용 또는 제공에 동의하는 경우 개인위치정보주체 권리의 전부를 행사할 수 있습니다.
제 12조 (위치정보관리책임자의 지정)

① 회사는 위치정보를 적절히 관리·보호하고 개인위치정보주체의 불만을 원활히 처리할 수 있도록 실질적인 책임을 질 수 있는 지위에 있는 자를 위치정보관리책임자로 지정해 운영합니다.

② 위치정보관리책임자는 위치기반서비스를 제공하는 부서의 부서장으로서 구체적인 사항은 본 약관의 부칙에 따릅니다.
제 13 조 (손해배상)

① 회사가 위치정보의 보호 및 이용 등에 관한 법률 제15조 내지 제26조의 규정을 위반한 행위로 회원에게 손해가 발생한 경우 회원은 회사에 대하여 손해배상 청구를 할 수 있습니다. 이 경우 회사는 고의, 과실이 없음을 입증하지 못하는 경우 책임을 면할 수 없습니다.

② 회원이 본 약관의 규정을 위반하여 회사에 손해가 발생한 경우 회사는 회원에 대하여 손해배상을 청구할 수 있습니다. 이 경우 회원은 고의, 과실이 없음을 입증하지 못하는 경우 책임을 면할 수 없습니다.
제 14 조 (면책)

① 회사는 다음 각 호의 경우로 서비스를 제공할 수 없는 경우 이로 인하여 회원에게 발생한 손해에 대해서는 책임을 부담하지 않습니다.

1. 천재지변 또는 이에 준하는 불가항력의 상태가 있는 경우
2. 서비스 제공을 위하여 회사와 서비스 제휴계약을 체결한 제3자의 고의적인 서비스 방해가 있는 경우
3. 회원의 귀책사유로 서비스 이용에 장애가 있는 경우
4. 제1호 내지 제3호를 제외한 기타 회사의 고의ㆍ과실이 없는 사유로 인한 경우

② 회사는 서비스 및 서비스에 게재된 정보, 자료, 사실의 신뢰도, 정확성 등에 대해서는 보증을 하지 않으며 이로 인해 발생한 회원의 손해에 대하여는 책임을 부담하지 아니합니다.
제 15 조 (규정의 준용)

① 본 약관은 대한민국법령에 의하여 규정되고 이행됩니다.

② 본 약관에 규정되지 않은 사항에 대해서는 관련법령 및 상관습에 의합니다.
제 16 조 (분쟁의 조정 및 기타)

① 회사는 위치정보와 관련된 분쟁에 대해 당사자간 협의가 이루어지지 아니하거나 협의를 할 수 없는 경우에는 위치정보의 보호 및 이용 등에 관한 법률 제28조의 규정에 의한 방송통신위원회에 재정을 신청할 수 있습니다.

② 회사 또는 고객은 위치정보와 관련된 분쟁에 대해 당사자간 협의가 이루어지지 아니하거나 협의를 할 수 없는 경우에는 개인정보보호법 제43조의 규정에 의한 개인정보분쟁조정위원회에 조정을 신청할 수 있습니다.
제 17 조 (회사의 연락처) 회사의 상호 및 주소 등은 다음과 같습니다.

1. 상     호 : &amp;300;주&amp;301;비케이로지스

2. 대 표 자 : 김종훈

3. 주     소 : 인천광역시 남구 염전로 330 12층 10 호 제이타워1차 지식산업센터

2. 대표전화 : 0327778888


부 칙

제1조 (시행일) 이 약관은 2018년 05월 01일 부터 시행한다.

제2조 위치정보관리책임자는 2018년 05월 01일 을 기준으로 다음과 같이 지정합니다.

1. 소     속 : 마케팅부

2. 연 락 처 : 0327778888 </string>
    <string name="이용안내">1. 짐캐리는 메리츠화재 적재물 배상보험에 가입되어 있습니다.\n
2. 비행기 탑승 최소 2-3일전에 예약하시기 바랍니다.\n
3. 예약배송은 최소 비행기 탑승 1일전 픽업입니다.\n
4. 여행당일 환불,취소 불가합니다.\n
5. 당일배송은 비행기 탑승시간 18시 이후만 가능합니다.\n
6. 취소일로부터 영업일 기준 10일이내 환불\n
7. 드랍, 픽업 전 담당기사가 연락 드립니다.\n
8. 직접 인계불가시 담당기사와 보관장소 지정(경비실 등)\n
9. 부재 또는 연락두절 시 서비스가 자동 취소 될수 있습니다.</string>
    <string name="이용안내타이틀">이용안내</string>
</resources>