<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:layout_marginBottom="20dp"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:background="@drawable/roundsquarewhiteorangenobottom"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            ></LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/예약"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="13dp"
            android:paddingLeft="5dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="오후 1시 ~ 오후 2시"
            android:gravity="center"
            android:textSize="12dp"

            android:layout_gravity="center_vertical"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:id="@+id/vtime_list"
            />





        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="픽업완료 및 배송중"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:id="@+id/number_list"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/roundsquareorangenotop"
        android:orientation="vertical"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                >
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                >
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.15"
            >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:text="@string/배송희망일"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:textSize="12dp"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.8"
                        android:text="2017-04-09"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:id="@+id/vdate_list"
                        android:textSize="11dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1."
                    >



                </LinearLayout>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="FROM:"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="대한민국 서울특별시 금천구 가산동 가산디지털2로 14 대륭테크노타운12차 701호"
                    android:textColor="#666"
                    android:textStyle="bold"
                    android:gravity="center|left"
                    android:layout_weight="1"
                    android:id="@+id/addr1_list"
                    android:textSize="12dp"
                    />

            </LinearLayout>





        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.45"
            ></LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.15"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.4"
                        android:text="@string/탑승일시조"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingLeft="10dp"
                        android:textSize="12dp"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.9"
                        android:text="2017-04-09"
                        android:textColor="@color/orange"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingLeft="6dp"
                        android:id="@+id/bdate_list"
                        android:textSize="12dp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="오전 08시 ~ 오전 09시"
                        android:textColor="#666666"
                        android:textStyle="bold"
                        android:gravity="center|left"
                        android:paddingLeft="6dp"
                        android:textSize="12dp"
                        android:id="@+id/btime_list"
                        />

                </LinearLayout>





            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="TO:"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="3"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="대한민국 서울특별시 금천구 가산동 가산디지털2로 14 대륭테크노타운12차 701호"
                    android:textColor="#666"
                    android:textStyle="bold"
                    android:gravity="center|left"
                    android:layout_weight="1"
                    android:id="@+id/addr2_list"
                    android:textSize="12dp"

                    />

            </LinearLayout>





        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.45"
            ></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@drawable/squareroundblue"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.9"
                >
            </LinearLayout>








        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:textColor="#fff"
                        android:text="@string/항공편명조"
                        android:gravity="center|bottom"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:paddingLeft="3dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="#666"
                        android:text="KE4097"
                        android:gravity="center|left|bottom"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:id="@+id/flight_list"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="12dp"
                        android:textStyle="bold"
                        android:textColor="#666"
                        android:text="010-8529-2434"
                        android:gravity="center_horizontal"
                        android:id="@+id/tel_list"
                        />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        ></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:textColor="#fff"
                        android:text="@string/일반가방"
                        android:gravity="center|bottom"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:paddingLeft="13dp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="#666"
                        android:text="2개"
                        android:gravity="center|left|bottom"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:id="@+id/bag1_list"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.8"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1.5"
                        ></LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:gravity="center_horizontal"
                        android:text="@string/규격외가방"
                        android:textColor="#fff"
                        android:textSize="12dp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="#666"
                        android:text="2개"
                        android:gravity="center_horizontal|left"
                        android:textStyle="bold"
                        android:textSize="12dp"
                        android:id="@+id/bag2_list"
                        />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/총합계"
                    android:layout_weight="1.5"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="11dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="70,000"
                    android:textColor="#666"
                    android:gravity="center|right"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:id="@+id/fee_list"
                    android:paddingRight="5dp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.7"
                    android:text="만원"
                    android:textColor="#fff"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textSize="11dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"

                    ></LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:id="@+id/driver_list"
                />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>
</LinearLayout>